--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "postinstall": "cd ../frontend && npm ci && npm run build"
+    "postinstall": "cd ../frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
