Implement Excellence Driving brand identity and UI redesign

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Excellence Driving",
+  "name": "Excellence Driving Management Dashboard",
+  "description": "Manage registrations, students, and schedules seamlessly — powered by Excellence Driving",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +21,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#002b5c",
+  "background_color": "#f9f9f9"
 }
